--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
   <h1>VLADPACK</h1>
-  <p>WBienvenidos a mi Web!</p>
+  <p>Bienvenidos a mi Web!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
